# mnemonic_memory_ai

./: .gitignore  CHAT_TEMPLATE.md  JOURNAL.md  README.md  ROADMAP.md  chroma_db_check.py  create_graph_test_data.py  diagnose.py  get_structure.py  guide.md  install.sh  main.py  memory.json  merge_dbs.py  migrate.py  migration_tags.py  mnemonic.db  my_knowledge.db  pyproject.toml  realistic_test_data.py  report.html  run.py  strategy.md
.mnemonic/: memories.json  memories.json.backup  mnemonic.db  mnemonic.db.backup
.mnemonic/chroma/: chroma.sqlite3
.mnemonic/chroma_backup_20251025_000634/: chroma.sqlite3
.mnemonic/chroma_backup_20251025_001209/: chroma.sqlite3
.mnemonic/chroma_backup_20251025_131331/: chroma.sqlite3
.mnemonic/embeddings_cache/: cache.db
migrations/: M001_initial_schema.py  M002_add_entity_tables.py  M003_add_reextraction_queue.py  M004_add_uuid_column.py  M004_uuid_backfill.py  M005_add_sessions.py  __init__.py
mnemonic/: __init__.py  __main__.py  checkpointing.py  cli.py  cli_entities.py  cli_entities.py.bak  cli_graph.py  cli_sessions.py  config.py  daily_review.py  embedding_service.py  entity_clustering.py  entity_extractor.py  entity_graph.py  entity_search.py  entity_storage.py  entity_timeline.py  entity_type_manager.py  gap_analyser.py  graph_explorer.py  llm_providers.py  memory_system.py  reextraction_queue.py  reextraction_worker.py  sessions.py  vector_store.py  view_checkpoints.py  weekly_report.py
mnemonic/core/: memory.py
mnemonic/tests/: test_memory_system.py  test_vector_store.py
tests/: test_api_key_direct.py  test_basic_session.py  test_cli.py  test_day6_complete.py  test_day7_entity_management.py  test_embedding_service.py  test_entity_clustering.py  test_entity_graph.py  test_entity_search.py  test_entity_system.py  test_entity_timeline.py  test_graph_explorer.py  test_hybrid_semantic.py  test_integration_graph.py  test_list_models.py  test_llm_call_manual.py  test_llm_call_simple.py  test_memory_system.py  test_reextraction_worker.py  test_storage_coupling.py
